# libspectrum

./: .gitignore  CMakeLists.txt  config.h.in  libspectrum.h
